--- a/pagina.html
+++ b/pagina.html
@@ -11,7 +11,12 @@
     <div id="container">
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increible</p>
+            <p>
+                Y este es el párrafo de inicio donde vamos a explicar las cosas increible
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nulla doloribus sequi tempore eius accusantium fuga perferendis, eos illo a quo exercitationem, minus libero molestiae eum quaerat dicta odit placeat!
+            </p>
         </div>
 
     </div>
