modifiqué la cabecera y el color del texto

--- a/pagina.html
+++ b/pagina.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">tu blog de comentarios</span>
+            <span id="tagline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, libero?</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
