--- a/pagina.html
+++ b/pagina.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">tu blog de comentarios</span>
+            <span id="tagline">fdfsdvsfdvsdfsdfsdfs</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -21,6 +21,9 @@
             </p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nulla doloribus sequi tempore eius accusantium fuga perferendis, eos illo a quo exercitationem, minus libero molestiae eum quaerat dicta odit placeat!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, labore voluptatum facere exercitationem, eaque aliquam necessitatibus a odio molestias culpa perferendis, amet nobis quam! Necessitatibus vel molestias voluptate in alias.
             </p>
         </div>
 
